# Projekt_Smart_Home

./: readme.md
backend/: db.sqlite3  pyproject.toml
backend/core/: settings.py  urls.py
backend/devices/: admin.py  models.py
backend/devices/migrations/: 0001_initial.py
backend/users/: admin.py  models.py  serializers.py  urls.py  views.py
core/: settings.py
devices/: models.py
frontend/: README.md  package.json
frontend/src/: app.html
frontend/src/routes/: +layout.server.ts  layout.css
frontend/src/routes/(protected)/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
frontend/src/routes/login/: +page.server.ts  +page.svelte
frontend/src/routes/register/: +page.server.ts  +page.svelte
